<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- first page of the application -->
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="type_your_name">Type your name</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate"> Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>

    <!-- order summary of application -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Emily">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="CheckWhipped" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="CheckChocolate">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="5">%d</xliff:g></string>
    <string name="order_summary_total">Total: <xliff:g id="total" example="21 kn">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>

    <string name="order_summary_email_subject">Just Java order for <xliff:g id="subject" example="tomi">%s</xliff:g></string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="placeholder">2</string>
</resources>
