<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/name_edittext_view"
        android:hint="@string/type_your_name"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:text="@string/toppings"
        style="@style/HeaderTextStyle">

    </TextView>

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/whipped_cream"
        android:layout_marginRight="24dp"
        android:textSize="16sp">
    </CheckBox>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/chocolate"
        android:layout_marginRight="24dp"
        android:textSize="16sp">
    </CheckBox>

    <TextView
        android:id="@+id/prvi_textview"
        android:text="@string/quantity"
        style="@style/HeaderTextStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:text="-"
            android:onClick="decrement"/>

        <TextView
            android:textSize="16sp"
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textAlignment="center"
            android:text="2" />

        <Button
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:text="+"
            android:onClick="increment"/>

    </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"/>
</LinearLayout>
</ScrollView>
